--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prestigious Woodworks, LLC.</title>
 
+    <!-- Bootstrap CSS (required for cards & .card-img-top) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    />
     <!-- Main Styles -->
     <link rel="stylesheet" href="style.css" />
 
@@ -38,6 +46,18 @@
       <section id="products" class="section">
         <h2>Our Products and Services</h2>
 
+        <!-- =============================
+             DYNAMIC SERVICES FROM SUPABASE
+             ============================= -->
+        <div id="services-list" class="card-container dynamic-services">
+          <!-- Supabase service cards will be injected here by app.js -->
+        </div>
+
+        <!-- =============================
+             ORIGINAL STATIC CARDS (left as an option)
+             Commented out for now
+             ============================= -->
+        <!--
         <div class="card-container">
           <div class="card wood-card">
             <img src="assets/woodcrafts.png" alt="Woodcrafts" />
@@ -68,6 +88,7 @@
             </p>
           </div>
         </div>
+        -->
       </section>
 
       <!-- CONTACT FORM -->
